# tyr-tree-compression

./: CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci_ctest.yml  ci_release.yml  release.yml
dependencies/cista/: CMakeLists.txt
dependencies/valla/: CMakeLists.txt
docs/: BUILD.md
exe/: astar_eager.cpp  gbfs_lazy.cpp
experiments/: 2026-1-8-combiner-pair.py  2026-1-8-combiner-profiling-classical.py  2026-1-8-combiner-profiling-numeric.py  2026-1-8-combiner.py  2026-1-8-gbfs_lazy-profiling-classical-1.py  parser_datalog.py  parser_search.py  suite.py  suite_test.py
experiments/astar_eager/: 2026-4-3-blind.py  astar_eager.sh  parser_astar_eager.py
experiments/gbfs_lazy/: 2026-1-8-combiner-pair.py  2026-1-8-combiner-profiling-classical.py  2026-1-8-combiner-profiling-numeric.py  2026-1-8-combiner-tyr-pl.py  2026-1-8-combiner.py  2026-1-8-gbfs_lazy-1.py  2026-1-8-gbfs_lazy-2.py  2026-1-8-gbfs_lazy-4.py  2026-1-8-gbfs_lazy-8.py  2026-1-8-gbfs_lazy-profiling-classical-1.py  2026-1-8-gbfs_lazy-profiling-classical-2.py  2026-1-8-gbfs_lazy-profiling-classical.py  2026-1-8-gbfs_lazy-profiling-numeric-1.py  2026-1-8-gbfs_lazy-profiling-numeric-2.py  2026-1-8-gbfs_lazy-profiling-numeric.py  gbfs_lazy.sh
experiments/numeric_tree/: 2026-04-20-A-astar_eager.py  2026-04-20-A-gbfs-lazy.py
experiments/tree_gbfs_lazy/: 2026-04-01-A-gbfs_lazy-trial.py  2026-04-01-B-astar-trial.py  2026-04-09-A-gbfs_lazy_numeric-trial.py  2026-04-13-A-gbfs_lazy.py  2026-04-15-A-gbfs_lazy.py  2026-04-20-A-astar_eager.py  2026-04-20-A-gbfs_lazy_goalcount.py
include/tyr/: tyr.hpp
include/tyr/analysis/: analysis.hpp  declarations.hpp  domains.hpp  formatter.hpp  listeners.hpp  stratification.hpp
include/tyr/buffer/: buffer.hpp  declarations.hpp  indexed_hash_set.hpp
include/tyr/common/: array.hpp  bit.hpp  bit_packed_array_pool.hpp  bit_packed_array_set.hpp  bit_packed_layout.hpp  bits.hpp  block_array_pool.hpp  block_array_set.hpp  canonicalization.hpp  chrono.hpp  closed_interval.hpp  common.hpp  comparators.hpp  config.hpp  declarations.hpp  dynamic_bitset.hpp  equal_to.hpp  formatter.hpp  hash.hpp  index_mixins.hpp  indexed_hash_set.hpp  iostream.hpp  observer_ptr.hpp  onetbb.hpp  optional.hpp  raw_array_pool.hpp  raw_array_set.hpp  segmented_array_pool.hpp  segmented_vector.hpp  shared_object_pool.hpp  tuple.hpp  types.hpp  types_utils.hpp  uint_mixins.hpp  unique_object_pool.hpp  unordered_set.hpp  vector.hpp  (+1 more)
python/examples/: gbfs_lazy.py
python/src/pytyr/: CMakeLists.txt  init_declarations.hpp
python/src/pytyr/common/: bindings.cpp  bindings.hpp
python/src/pytyr/formalism/: bindings.cpp
python/src/pytyr/formalism/planning/: __init__.py  bindings.cpp  bindings.hpp  datas.cpp  datas.hpp  domains.cpp  domains.hpp  indices.cpp  indices.hpp  invariants.cpp  invariants.hpp  mutable.cpp  mutable.hpp  views.cpp  views.hpp
python/src/pytyr/planning/: __init__.py  bindings.cpp  bindings.hpp
python/src/pytyr/planning/lifted/: __init__.py
python/src/pytyr/utils/: unordered_map.h  vector.hpp
src/: CMakeLists.txt
src/analysis/: domains_translation.cpp  listeners.cpp  program_domains.cpp  stratification.cpp  stratification_utils.hpp  task_domains.cpp
src/datalog/: applicability.cpp  assignment_sets.cpp  bottom_up.cpp  consistency_graph.cpp  delta_kpkc.cpp  delta_kpkc_graph.cpp  fact_set.cpp  formatter.cpp  rule_scheduler.cpp
src/datalog/policies/: annotation.cpp  termination.cpp
src/datalog/workspaces/: d2p.cpp  facts.cpp  program.cpp  rule.cpp
src/formalism/datalog/: builder.cpp  formatter.cpp  grounder.cpp  merge.cpp  repository.cpp  variable_dependency_graph.cpp  views.cpp
src/formalism/planning/: builder.cpp  fdr_context.cpp  formatter.cpp  grounder.cpp  loki_to_tyr.cpp  loki_to_tyr.hpp  merge.cpp  merge_datalog.cpp  merge_planning.cpp  parser.cpp  planning_task.cpp  repository.cpp  views.cpp
src/formalism/planning/invariants/: constraints.cpp  constraints.hpp  formatter.cpp  initial_state.cpp  initial_state.hpp  matcher.cpp  matching.cpp  matching.hpp  mutexes.cpp  normalization.cpp  normalization.hpp  proof.cpp  proof.hpp  refinement.cpp  refinement.hpp  synthesis.cpp  utils.hpp
src/formalism/planning/mutable/: formatter.cpp
src/planning/: action_executor.cpp  applicability.cpp  formatter.cpp  ground_task.cpp  lifted_task.cpp  loki_to_tyr.cpp  loki_to_tyr.hpp  metric.hpp  plan.cpp  task_utils.cpp
src/planning/algorithms/: astar_eager.cpp  gbfs_lazy.cpp
src/planning/algorithms/astar_eager/: event_handler.cpp
src/planning/algorithms/gbfs_lazy/: event_handler.cpp
src/planning/ground_task/: axiom_evaluator.cpp  axiom_stratification.cpp  node.cpp  state.cpp  state_repository.cpp  successor_generator.cpp
src/planning/ground_task/state_storage/: atom_tree_compression.cpp  fact_tree_compression.cpp
src/planning/ground_task/state_storage/hash_set/: atom.cpp  context.cpp  fact.cpp
src/planning/ground_task/state_storage/tree_compression/: atom.cpp  context.cpp  fact.cpp
src/planning/heuristics/: goal_count.cpp
src/planning/lifted_task/: axiom_evaluator.cpp  node.cpp  state.cpp  state_repository.cpp  successor_generator.cpp  task_grounder.cpp
src/planning/lifted_task/heuristics/: ff.cpp  rpg_add.cpp  rpg_ff.cpp  rpg_max.cpp
src/planning/lifted_task/state_storage/hash_set/: atom.cpp  fact.cpp
src/planning/lifted_task/state_storage/tree_compression/: atom.cpp  fact.cpp
src/planning/programs/: action.cpp  axiom.cpp  common.cpp  common.hpp  ground.cpp  rpg.cpp
src/planning/state_storage/hash_set/: numeric.cpp
src/planning/state_storage/tree_compression/: numeric.cpp
tests/unit/: CMakeLists.txt  utils.hpp
tests/unit/buffer/: indexed_hash_set.cpp
tests/unit/common/: bit_packed_array_pool.cpp  bit_packed_array_set.cpp  dynamic_bitset.cpp  vector.cpp
tests/unit/datalog/: delta_kpkc.cpp
tests/unit/formalism/: builder.cpp  index.cpp  repository.cpp  unification.cpp  view.cpp
tests/unit/formalism/planning/invariants/: synthesis.cpp
tests/unit/planning/: ground_task.cpp  ground_vs_lifted.cpp  lifted_task.cpp
(+420 files in other folders)
